@@ -1,4 +1,5 @@
-    ADDED: popular-links - krusader's answer to google-ranking ;-)
+    ADDED: popular urls is now persistent
+    ADDED: popular-urls - krusader's answer to google-ranking ;-)
     ADDED: better completion in the origin box: constructs such as ~/src and $QTDIR/bin 
            should work now.
     ADDED: Slovenian translation (thanks Matej Urbancic)
